# tethys-platform-project-wrlu

./: .env  README.md
tethysapp-project_wrlu/: .gitignore  install.yml  pyproject.toml
tethysapp-project_wrlu/tethysapp/project_wrlu/: __init__.py  app.py  controllers.py
tethysapp-project_wrlu/tethysapp/project_wrlu/templates/project_wrlu/: base.html  home.html
tethysapp-project_wrlu/tethysapp/project_wrlu/tests/: tests.py
