[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tethysapp-project_wrlu"
description =  "Water Related Land Use in Utah"

keywords = ["app", "hydrology", "water use"]
authors = [
    {name = "Reshma", email = "reshma.ragh@gmail.com"},
]
classifiers = [
     "Environment :: Web Environment",
     "Framework :: Django",
     "Intended Audience :: Developers",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Topic :: Internet :: WWW/HTTP",
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
"tethysapp.project_wrlu" = [
    "templates/**/*",
    "public/**/*",
    "resources/**/*",
    "workspaces/**/*"
]